# kraken-rs

./: Cargo.toml  README.md  build.rs  ccc_mapping.toml
src/: aa_translate.rs  blast.rs  build_db.rs  classify.rs  compact_hash.rs  download.rs  dump_table.rs  dust.rs  estimate.rs  ffi.rs  hash.rs  hyperloglog.rs  lib.rs  lookup.rs  minimizer.rs  mmap_file.rs  mmtest.rs  omp.rs  readcounts.rs  reports.rs  seq.rs  taxonomy.rs  types.rs  utilities.rs
tests/: integration_test.rs
tests/reference/: classify_all.txt  classify_covid.txt  hash.k2d  opts.k2d  seqid2taxid.map
