[package]
name = "kraken2-rs"
version = "0.1.0"
edition = "2021"
description = "Taxonomic sequence classification system — Rust port of Kraken 2"
license = "MIT"
repository = "https://github.com/henriksson-lab/kraken-rs"
homepage = "https://github.com/henriksson-lab/kraken-rs"
documentation = "https://docs.rs/kraken2-rs"
keywords = ["bioinformatics", "kraken", "taxonomy", "metagenomics", "classification"]
categories = ["science", "command-line-utilities"]
include = [
    "/Cargo.toml",
    "/README.md",
    "/BENCHMARKS.md",
    "/build.rs",
    "/data/hyperloglogplus-bias.h",
    "/src/**",
    "/tests/integration_test.rs",
]

[lib]
name = "kraken2_rs"
path = "src/lib.rs"

[[bin]]
name = "kraken2"
path = "src/bin/kraken2.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
rayon = "1"
memmap2 = "0.9"
parking_lot = "0.12"
flate2 = "1"
crossbeam = "0.8"
bzip2 = "0.6"
ureq = "3"
noodles = { version = "0.109", features = ["fasta", "fastq"] }
libc = "0.2"
ahash = "0.8"
tar = "0.4"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1

[profile.bench]
lto = true
codegen-units = 1
